--- a/Capstone_07.ipynb
+++ b/Capstone_07.ipynb
@@ -32,7 +32,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Predicción de los accidentes en Catalunya entre los años 2010-2018 mediante Machine learning"
+        "# Prediction of accidents in Catalonia between 2010-2018 through Machine learning"
       ]
     },
     {
